--- a/src/app/image-editor/toolbar/main-tools/main-tools.component.html
+++ b/src/app/image-editor/toolbar/main-tools/main-tools.component.html
@@ -2,20 +2,14 @@
   <mat-grid-tile>
     <button matTooltip="Crop" matTooltipPosition="above" (click)="canvasCommand('START_CROP')" mat-icon-button [disabled]="selectedToolType==='DEACTIVATE'"><i class="material-icons" [ngClass]="{'icons':selectedToolType!=='DEACTIVATE'}">crop</i></button>
   </mat-grid-tile>
-  <mat-grid-tile>
-    <button matTooltip="Strech Fullscreen" matTooltipPosition="above" mat-icon-button [disabled]="selectedToolType==='DEACTIVATE'"><i class="material-icons" [ngClass]="{'icons':selectedToolType!=='DEACTIVATE'}">fullscreen</i></button>
+  <!-- <mat-grid-tile>
+    <button matTooltip="Text" matTooltipPosition="above" (click)="canvasCommand('ADD_TEXT')" mat-icon-button [disabled]="selectedToolType==='DEACTIVATE'"><i class="material-icons" [ngClass]="{'icons':selectedToolType!=='DEACTIVATE'}">text_fields</i></button>
   </mat-grid-tile>
   <mat-grid-tile>
-    <button matTooltip="Strech Fullscreen" matTooltipPosition="above" mat-icon-button [disabled]="selectedToolType==='DEACTIVATE'"><i class="material-icons" [ngClass]="{'icons':selectedToolType!=='DEACTIVATE'}">fullscreen_exit</i></button>
-  </mat-grid-tile>
-  <mat-grid-tile>
-    <button matTooltip="Preview" matTooltipPosition="above" mat-icon-button [disabled]="selectedToolType==='DEACTIVATE'"><i class="material-icons" [ngClass]="{'icons':selectedToolType!=='DEACTIVATE'}">zoom_in</i></button>
-  </mat-grid-tile>
+    <button matTooltip="Shape Mask" matTooltipPosition="above" (click)="onChangeToolType('SHAPE_MASK')" mat-icon-button [disabled]="selectedToolType==='DEACTIVATE'"><i class="material-icons" [ngClass]="{'icons':selectedToolType!=='DEACTIVATE'}">filter_b_and_w</i></button>
+  </mat-grid-tile> -->
   <mat-grid-tile>
     <button matTooltip="Clone Image" matTooltipPosition="above" (click)="canvasCommand('CLONE')" mat-icon-button [disabled]="selectedToolType==='DEACTIVATE'"><i class="material-icons" [ngClass]="{'icons':selectedToolType!=='DEACTIVATE'}">content_copy</i></button>
-  </mat-grid-tile>
-  <mat-grid-tile>
-    <button matTooltip="Text" matTooltipPosition="above" (click)="canvasCommand('ADD_TEXT')" mat-icon-button [disabled]="selectedToolType==='DEACTIVATE'"><i class="material-icons" [ngClass]="{'icons':selectedToolType!=='DEACTIVATE'}">text_fields</i></button>
   </mat-grid-tile>
   <mat-grid-tile>
     <button matTooltip="Flip Horizontally" matTooltipPosition="above" (click)="canvasCommand('FLIP:X')" mat-icon-button [disabled]="selectedToolType==='DEACTIVATE'"><i class="material-icons" [ngClass]="{'icons':selectedToolType!=='DEACTIVATE'}">flip</i></button>
@@ -24,13 +18,11 @@
     <button matTooltip="Photo Filter" matTooltipPosition="above" (click)="canvasCommand('ADD_FILTER')" mat-icon-button [disabled]="selectedToolType==='DEACTIVATE'"><i class="material-icons" [ngClass]="{'icons':selectedToolType!=='DEACTIVATE'}">format_paint</i></button>
   </mat-grid-tile>
   <mat-grid-tile>
-    <button matTooltip="Save Photo" matTooltipPosition="above" (click)="canvasCommand('DOWNLOAD_CURRENT_CANVAS')" mat-icon-button
-      [disabled]="selectedToolType==='DEACTIVATE'"><i class="material-icons" [ngClass]="{'icons':selectedToolType!=='DEACTIVATE'}">save</i></button>
-  </mat-grid-tile>
-  <mat-grid-tile>
-    <button matTooltip="Shape Mask" matTooltipPosition="above" (click)="onChangeToolType('SHAPE_MASK')" mat-icon-button [disabled]="selectedToolType==='DEACTIVATE'"><i class="material-icons" [ngClass]="{'icons':selectedToolType!=='DEACTIVATE'}">filter_b_and_w</i></button>
-  </mat-grid-tile>
-  <mat-grid-tile>
-    <button matTooltip="Pen" matTooltipPosition="above" (click)="canvasCommand('PEN')" mat-icon-button [disabled]="selectedToolType==='DEACTIVATE'"><i class="material-icons" [ngClass]="{'icons':selectedToolType!=='DEACTIVATE'}">mode_edit</i></button>
+    <form enctype="multipart/form-data">
+      <button matTooltip="Save Photo" matTooltipPosition="above" (click)="editPhoto($event)" mat-icon-button
+        [disabled]="selectedToolType==='DEACTIVATE'"><i class="material-icons" [ngClass]="{'icons':selectedToolType!=='DEACTIVATE'}">save</i>
+          <input id="upload-file-input" style="display:none;"/>
+      </button>
+    </form>
   </mat-grid-tile>
 </mat-grid-list>
