--- a/src/app/image-editor/toolbar/filter-tools/filter-tools.component.html
+++ b/src/app/image-editor/toolbar/filter-tools/filter-tools.component.html
@@ -16,17 +16,17 @@
       <i class="material-icons" [ngClass]="{'icons':filterValues['brightness']!==0}">brightness_medium</i>
     </button>
     <div class="slider-wrapper">
-      <mat-slider min="-0.5" step="0.05" max="0.5" [(ngModel)]="filterValues['brightness']" (change)="onFilterUpdate()" class="slider "></mat-slider>
+      <mat-slider min="0" step="0.05" max="1" ngDefaultControl [(ngModel)]="filterValues['brightness']" (change)="onFilterUpdate()" class="slider" [displayWith]="formatLabel"><input matSliderThumb></mat-slider>
     </div>
   </div>
 
   <!-- contrast amount -->
   <div class="picker-container">
     <button mat-icon-button matTooltip="Contrast" matTooltipPosition="above" (click)="onSetToDefault('contrast')" [disabled]="filterValues['contrast']===0">
-    <i class="material-icons" [ngClass]="{'icons':filterValues['contrast']!==0}">brightness_2</i>
-  </button>
+      <i class="material-icons" [ngClass]="{'icons':filterValues['contrast']!==0}">brightness_2</i>
+    </button>
     <div class="slider-wrapper">
-      <mat-slider min="-0.5" step="0.05" max="0.5" [(ngModel)]="filterValues['contrast']" (change)="onFilterUpdate()" class="slider "></mat-slider>
+      <mat-slider min="0" step="0.05" max="1" ngDefaultControl [(ngModel)]="filterValues['contrast']" (change)="onFilterUpdate()" class="slider" [displayWith]="formatLabel"><input matSliderThumb></mat-slider>
     </div>
   </div>
 
@@ -36,7 +36,7 @@
     <i class="material-icons" [ngClass]="{'icons':filterValues['saturation']!==0}">invert_colors</i>
   </button>
     <div class="slider-wrapper">
-      <mat-slider min="-1" step="0.05" max="1" [(ngModel)]="filterValues['saturation']" (change)="onFilterUpdate()" class="slider "></mat-slider>
+      <mat-slider min="0" step="0.05" max="20" ngDefaultControl [(ngModel)]="filterValues['saturation']" (change)="onFilterUpdate()" class="slider" [displayWith]="formatLabel"><input matSliderThumb></mat-slider>
     </div>
   </div>
 
@@ -46,7 +46,7 @@
     <i class="material-icons" [ngClass]="{'icons':filterValues['hue']!==0}">colorize</i>
   </button>
     <div class="slider-wrapper">
-      <mat-slider min="-2" step="0.002" max="2" [(ngModel)]="filterValues['hue']" (change)="onFilterUpdate()" class="slider"></mat-slider>
+      <mat-slider min="0" step="0.05" max="100" ngDefaultControl [(ngModel)]="filterValues['hue']" (change)="onFilterUpdate()" class="slider" [displayWith]="formatLabel"><input matSliderThumb></mat-slider>
     </div>
   </div>
 
@@ -56,7 +56,7 @@
     <i class="material-icons" [ngClass]="{'icons':filterValues['noise']!==0}">graphic_eq</i>
   </button>
     <div class="slider-wrapper">
-      <mat-slider min="0" step="1" max="1000" [(ngModel)]="filterValues['noise']" (change)="onFilterUpdate()" class="slider"></mat-slider>
+      <mat-slider min="0" step="1" max="100" ngDefaultControl [(ngModel)]="filterValues['noise']" (change)="onFilterUpdate()" class="slider" [displayWith]="formatLabel"><input matSliderThumb></mat-slider>
     </div>
   </div>
 
@@ -66,7 +66,7 @@
     <i class="material-icons" [ngClass]="{'icons':filterValues['blur']!==0}">blur_circular</i>
   </button>
     <div class="slider-wrapper">
-      <mat-slider min="0" step="0.01" max="1" [(ngModel)]="filterValues['blur']" (change)="onFilterUpdate()" class="slider"></mat-slider>
+      <mat-slider min="0" step="0.1" max="1" ngDefaultControl [(ngModel)]="filterValues['blur']" (change)="onFilterUpdate()" class="slider" [displayWith]="formatLabel"><input matSliderThumb></mat-slider>
     </div>
   </div>
 
@@ -76,7 +76,7 @@
     <i class="material-icons" [ngClass]="{'icons':filterValues['pixelate']!==0}">view_comfy</i>
   </button>
     <div class="slider-wrapper">
-      <mat-slider min="0" step="1" max="20" [(ngModel)]="filterValues['pixelate']" (change)="onFilterUpdate()" class="slider"></mat-slider>
+      <mat-slider min="0.01" step="0.1" max="10" ngDefaultControl [(ngModel)]="filterValues['pixelate']" (change)="onFilterUpdate()" class="slider" [displayWith]="formatLabel"><input matSliderThumb></mat-slider>
     </div>
   </div>
 
@@ -89,12 +89,12 @@
 <div *ngIf="panelType==='PRESET'" class="panel-container">
 
   <!-- advanced panel button -->
-  <div class="button-container">
+  <!-- <div class="button-container">
     <button mat-raised-button [color]="filterValues.sharpen?'accent':'warn'" class="button" (click)="togglePreset('sharpen')">SHARPEN</button>
   </div>
   <div class="button-container">
     <button mat-raised-button [color]="filterValues.emboss?'accent':'warn'" class="button" (click)="togglePreset('emboss')">EMBOSS</button>
-  </div>
+  </div> -->
   <div class="button-container">
     <button mat-raised-button [color]="filterValues.grayscale?'accent':'warn'" class="button" (click)="togglePreset('grayscale')">GRAYSCALE</button>
   </div>
