--- a/src/app/image-editor/toolbar/text-tools/text-tools.component.html
+++ b/src/app/image-editor/toolbar/text-tools/text-tools.component.html
@@ -43,13 +43,13 @@
 <!-- color and opacity picker -->
 <div class="picker-container" style="margin:12px 0px 0px 0px;">
   <button matTooltip="Color Picker" matTooltipPosition="above" [disabled]="isSelectionInactive" mat-icon-button [(colorPicker)]="color"
-    (colorPickerChange)="onUpdateText()" [cpWidth]="196" [cpDisableInput]="true" [cpPosition]="'bottom'" [cpPositionOffset]="'50%'"
+    (colorPickerChange)="onUpdateText()" [cpWidth]="'196'" [cpDisableInput]="true" [cpPosition]="'bottom'" [cpPositionOffset]="'50%'"
     [cpPositionRelativeToArrow]="true" [cpSaveClickOutside]="true">
   <i [style.color]="color " class="material-icons icons">color_lens</i>
   </button>
   <div class="slider-wrapper">
     <mat-slider *ngIf="selectedToolType!=='TEXT:EDITING'" min="0" step="0.1" max="1" thumb-label="true" [(ngModel)]="opacity"
-      (change)="onUpdateText()" class="slider"></mat-slider>
+      (change)="onUpdateText()" class="slider"><input matSliderThumb></mat-slider>
   </div>
 </div>
 
@@ -70,7 +70,7 @@
     <i class="material-icons icons">format_line_spacing</i>
   </div>
   <div class="slider-wrapper">
-    <mat-slider min="0" step="0.8" max="4" thumb-label="true" [(ngModel)]="lineHeight" (change)="onUpdateText()" class="slider"></mat-slider>
+    <mat-slider min="0" step="0.8" max="4" thumb-label="true" [(ngModel)]="lineHeight" (change)="onUpdateText()" class="slider"><input matSliderThumb></mat-slider>
   </div>
 </div>
 
